# getKEGGpathways

./: README.md  README_cn.md  pyproject.toml
getKEGGpathways/: __init__.py  kegg.py
