[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "getKEGGpathways"
version = "0.1.0"
description = "Batch-fetch KEGG pathway gene lists as pandas DataFrames"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25",
    "pandas>=1.3",
    "tqdm>=4.60",
]

[tool.setuptools.packages.find]
include = ["getKEGGpathways*"]
